# libfoo

./: CMakeLists.txt  Project.cmake  README.rst  depends.json  project.xml  qiproject.xml
libfoo/: libfoo.hpp
src/: libfoo.cpp
